모바일 환경에 맞게 일부 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,16 +18,17 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+
+  .common-bg-style {
+    @apply bg-[#6B46C1] text-white p-8 flex flex-col items-center justify-center relative;
   }
 }
